# design-patterns-c-

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  factory-abstract
factory/abstract/: Factory.cpp  Object_a.cpp  Object_b.cpp  main.cpp
factory/abstract/includes/: Factory.hpp  Object.hpp  Object_a.hpp  Object_b.hpp  Object_factory.hpp
good_practice/: canonical_form.cpp  canonical_form.hpp
observer/: Example.cpp  Subject.cpp  main.cpp
observer/includes/: Example.hpp  Observer.hpp  Subject.hpp
